--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcc 'RM'
 - !lcsh 'Tea -- Health aspects'
 - !lcsh 'Tea -- Health aspects -- China'
+- GITenberg
 title: "A Treatise on Foreign Teas\r\nAbstracted From An Ingenious Work, Lately Published,\
   \ Entitled An Essay On the Nerves"
 url: http://www.gutenberg.org/ebooks/28549
